--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/base.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/base.html
@@ -19,25 +19,15 @@
 {% block app_title %}Time Series Viewer{% endblock %}
 
 {%block app_header%}
-
 {% endblock %}
+
+
 
 
 {% block exit_button_override %}
 {% endblock %}
 
-{% block app_navigation_items %}
-  <li class="title">App Navigation</li>
-  <li class="active"><a href="">Home</a></li>
-  <li><a href="">Jobs</a></li>
-  <li><a href="">Results</a></li>
-  <li class="title">Steps</li>
-  <li><a href="">1. The First Step</a></li>
-  <li><a href="">2. The Second Step</a></li>
-  <li><a href="">3. The Third Step</a></li>
-  <li class="separator"></li>
-  <li><a href="">Get Started</a></li>
-{% endblock %}
+{% block app_navigation_toggle_override %}{% endblock %}
 
 {% block app_content %}
 {% endblock %}
