--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -50,7 +50,7 @@ CUAHSI Time Series Viewer
 
 <div id="error-message"></div>
 <div id="ts-chart" class="highcharts-plot"></div>
-<button id = 'button' type="button">Toggle Statistics</button>
+<!--<button id = 'button' type="button">Toggle Statistics</button>-->
 <p></p>
 <div id = "stat_div" >
     <table id="stats-table" style="width:100%">
@@ -75,6 +75,39 @@ CUAHSI Time Series Viewer
     </table>
 </div>
 
+<table id="example" class="display" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <th></th>
+                <th>Name</th>
+                <th>Position</th>
+                <th>Office</th>
+                <th>Salary</th>
+                <th>Salary</th>
+                <th>Salary</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <th></th>
+                <th>Name</th>
+                <th>Position</th>
+                <th>Office</th>
+                <th>Salary</th>
+                <th>Salary</th>
+                <th>Salary</th>
+            </tr>
+        </tfoot>
+    </table>
+
+
+
+
+
+
+
+
+
 <!--<img src="{% static 'timeseries_viewer/images/394.gif' %}"/>-->
 <div id = loading>
     <!--http://cssload.net/-->
@@ -90,14 +123,7 @@ CUAHSI Time Series Viewer
 </div>
 
 
-
-
-
 {% endblock %}
-
-
-
-
 
 {% block app_actions %}
 {% endblock %}
@@ -108,6 +134,8 @@ CUAHSI Time Series Viewer
 <script src="/static/tethys_gizmos/vendor/highcharts/js/modules/exporting.js"></script>
 <script src="{% static 'timeseries_viewer/js/main.js' %}"></script>
 <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
+<link href = 'https://cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css' rel ='stylesheet'>
+<!--<script src = "https://code.jquery.com/jquery-1.12.0.min.js"></script>-->
   {{ block.super }}
 {% endblock %}
 
