--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/base.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/base.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {# The name you provided in your app.py is accessible through the tethys_app.name context variable #}
-{% block app_title %}Time Series Viewer{% endblock %}
+{% block app_title %}{% endblock %}
 
 {%block app_header%}
 {% endblock %}
