--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -52,8 +52,8 @@ CUAHSI Time Series Viewer
 <div id="ts-chart" class="highcharts-plot"></div>
 <!--<button id = 'button' type="button">Toggle Statistics</button>-->
 <p></p>
-<div id = "stat_div" >
-    <table id="stats-table" style="width:100%">
+
+    <!--<table id="stats-table" style="width:100%">
 
         <thead>
       <tr>
@@ -72,34 +72,36 @@ CUAHSI Time Series Viewer
         </thead>
         <tbody></tbody>
 
-    </table>
+    </table>-->
+
+<div id = "stat_div" >
+    <table id="example" class="display" cellspacing="0" width="100%">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th>Site Name</th>
+                    <th>Variable</th>
+                    <th>Value Count</th>
+                    <th>Mean</th>
+                    <th>Median</th>
+                    <th>Organization</th>
+                </tr>
+            </thead>
+            <tfoot>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th>Site Name</th>
+                    <th>Variable</th>
+                    <th>Value Count</th>
+                    <th>Mean</th>
+                    <th>Median</th>
+                    <th>Organization</th>
+                </tr>
+            </tfoot>
+        </table>
 </div>
-
-<table id="example" class="display" cellspacing="0" width="100%">
-        <thead>
-            <tr>
-                <th></th>
-                <th>Name</th>
-                <th>Position</th>
-                <th>Office</th>
-                <th>Salary</th>
-                <th>Salary</th>
-                <th>Salary</th>
-            </tr>
-        </thead>
-        <tfoot>
-            <tr>
-                <th></th>
-                <th>Name</th>
-                <th>Position</th>
-                <th>Office</th>
-                <th>Salary</th>
-                <th>Salary</th>
-                <th>Salary</th>
-            </tr>
-        </tfoot>
-    </table>
-
 
 
 
