--- a/tethysapp/timeseries_viewer/public/css/main.css
+++ b/tethysapp/timeseries_viewer/public/css/main.css
@@ -10,19 +10,6 @@ width:700px;
 #input_group{
     width:100px;
 }
-
-
-#stats-table{
-    font-size:16px;
-    width:100%;
-    border: 1px solid black;
-    margin-top: 20px;
-    align:center
-}
-#stats-table th, td {
-    border: 1px solid black;
-    padding: 4px;
-}
 #metadata-list {
      font-size:20px;
 }
@@ -32,9 +19,6 @@ width:700px;
 
 #inner-app-content {
     margin-right: 20px;
-}
-
-#app-content {
 }
 
 #app-header .tethys-app-header .icon-wrapper img
@@ -113,14 +97,11 @@ display:none !important;
 #loading{
     width: 100px;
 	height: 100px;
-
-
 	position: absolute;
 	top:0;
 	bottom: 0;
 	left: 0;
 	right: 0;
-
 	margin: auto;
 }
 #images_container{
@@ -136,7 +117,18 @@ td.details-control {
 tr.shown td.details-control {
 	background: url('close.png') no-repeat center center;
 }
-
+#example_length{
+	visibility: hidden;
+}
+#example_filter{
+	visibility: hidden;
+}
+#example_info{
+	visibility: hidden;
+}
+#example_paginate{
+	visibility: hidden;
+}
 
 
 .cssload-loader * {
