--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -51,7 +51,7 @@ CUAHSI Time Series Viewer
 <div id="error-message"></div>
 <div id="ts-chart" class="highcharts-plot"></div>
 <!--<button id = 'button' type="button">Toggle Statistics</button>-->
-<p></p>
+
 
     <!--<table id="stats-table" style="width:100%">
 
@@ -80,37 +80,33 @@ CUAHSI Time Series Viewer
                 <tr>
                     <th></th>
                     <th></th>
+                    <th>Organization</th>
                     <th>Site Name</th>
                     <th>Variable</th>
+                    <th>Variable Unit</th>
+                    <th>Sample Medium</th>
                     <th>Value Count</th>
-                    <th>Mean</th>
-                    <th>Median</th>
-                    <th>Organization</th>
+
+
                 </tr>
             </thead>
             <tfoot>
                 <tr>
                     <th></th>
                     <th></th>
+                    <th>Organization</th>
                     <th>Site Name</th>
                     <th>Variable</th>
+                    <th>Variable Unit</th>
+                    <th>Sample Medium</th>
                     <th>Value Count</th>
-                    <th>Mean</th>
-                    <th>Median</th>
-                    <th>Organization</th>
                 </tr>
             </tfoot>
         </table>
 </div>
+<!--<div id = "container" class ="highcharts-boxplot"></div>-->
 
 
-
-
-
-
-
-
-<!--<img src="{% static 'timeseries_viewer/images/394.gif' %}"/>-->
 <div id = loading>
     <!--http://cssload.net/-->
     <div id = images_container>
@@ -136,6 +132,7 @@ CUAHSI Time Series Viewer
 <script src="/static/tethys_gizmos/vendor/highcharts/js/modules/exporting.js"></script>
 <script src="{% static 'timeseries_viewer/js/main.js' %}"></script>
 <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
+
 <link href = 'https://cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css' rel ='stylesheet'>
 <!--<script src = "https://code.jquery.com/jquery-1.12.0.min.js"></script>-->
   {{ block.super }}
