--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -47,32 +47,42 @@ CUAHSI Time Series Viewer
 {% block app_content %}
 
 
+<div class="modal fade" id="hello" role="dialog">
+    <div class="modal-dialog1">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Welcome to the CUAHSI time series viewer!</h4>
+            </div>
+            <div class="modal-body">
+                <div id="welcome-info1">
+                    <p>
+                        This app should be launched from the HydroClient page on <a href='http://bcc-hiswebclient.azurewebsites.net'>CUAHSI</a>
+                    </p>
+                    <ol>
+                        <h6>1. Go to the CUAHSI HydroClient page</h6>
+                        <p>Use the map to search for the site of interest</p>
+                        <h6>2. Select time series</h6>
+                        <p>Select the time series from the search results</p>
+                        <h6>3. Launch the time series viewer</h6>
+                        <p>In your workspace, select the time series for visualization, choose Time series viewer, and launch tool.</p>
+                        <a class="btn btn-default" href='http://bcc-hiswebclient.azurewebsites.net'>Go to CUAHSI HydroClient website</a>
+                    </ol>
+                </div>
+            </div>
+            <div class="modal-footer">
+                 <div id="byu-logo-container1">
+                    <img src="{% static 'timeseries_viewer/images/byu-medallion.png' %}"/><span><i>Developed at the BYU Hydroinformatics Lab</i></span>
+                </div>
+                <button type="button" class="btn btn-default" id="close-popup1" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 
+<div id ='chartDiv'></div>
 <div id="error-message"></div>
-<div id="ts-chart" class="highcharts-plot"></div>
-<!--<button id = 'button' type="button">Toggle Statistics</button>-->
-
-
-    <!--<table id="stats-table" style="width:100%">
-
-        <thead>
-      <tr>
-          <th></th>
-          <th>Site Name</th>
-          <th>Variable</th>
-          <th>Organization</th>
-          <th>Quality</th>
-          <th>Method</th>
-          <th>Sample Medium</th>
-          <th>Value Count</th>
-          <th>Mean</th>
-          <th>Median</th>
-          <th>Standard Deviation</th>
-      </tr>
-        </thead>
-        <tbody></tbody>
-
-    </table>-->
+<!--<div id="ts-chart" class="highcharts-plot"></div>-->
 
 <div id = "stat_div" >
     <table id="example" class="display" cellspacing="0" width="100%">
@@ -88,22 +98,8 @@ CUAHSI Time Series Viewer
                     <th>Value Count</th>
                 </tr>
             </thead>
-            <tfoot>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th>Organization</th>
-                    <th>Site Name</th>
-                    <th>Variable</th>
-                    <th>Variable Unit</th>
-                    <th>Sample Medium</th>
-                    <th>Value Count</th>
-                </tr>
-            </tfoot>
         </table>
 </div>
-<!--<div id = "container" class ="highcharts-boxplot"></div>-->
-
 
 <div id = loading>
     <!--http://cssload.net/-->
@@ -125,13 +121,18 @@ CUAHSI Time Series Viewer
 {% endblock %}
 
 {% block scripts %}
+<script src="http://cdn.zingchart.com/zingchart.min.js"></script>
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/dygraph/1.1.1/dygraph-combined.js"></script>
 <script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts.js"></script>
 <script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts-more.js"></script>
 <script src="/static/tethys_gizmos/vendor/highcharts/js/modules/exporting.js"></script>
 <script src="{% static 'timeseries_viewer/js/main.js' %}"></script>
 <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
-
 <link href = 'https://cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css' rel ='stylesheet'>
+
+
+
 <!--<script src = "https://code.jquery.com/jquery-1.12.0.min.js"></script>-->
   {{ block.super }}
 {% endblock %}
