change reference to zipchart

--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -121,7 +121,7 @@ CUAHSI Time Series Viewer
 {% endblock %}
 
 {% block scripts %}
-<script src="http://cdn.zingchart.com/zingchart.min.js"></script>
+<script src="https://cdn.zingchart.com/zingchart.min.js"></script>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/dygraph/1.1.1/dygraph-combined.js"></script>
 <script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts.js"></script>
