--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -96,16 +96,19 @@ CUAHSI Time Series Viewer
 
 <div id = loading>
     <!--http://cssload.net/-->
-    <div id = images_container>
-        <div class="cssload-loader">
-	<div class="cssload-dot"></div>
-	<div class="cssload-dot"></div>
-	<div class="cssload-dot"></div>
-	<div class="cssload-dot"></div>
-	<div class="cssload-dot"></div>
+    <div id="floatingCirclesG">
+	<div class="f_circleG" id="frotateG_01"></div>
+	<div class="f_circleG" id="frotateG_02"></div>
+	<div class="f_circleG" id="frotateG_03"></div>
+	<div class="f_circleG" id="frotateG_04"></div>
+	<div class="f_circleG" id="frotateG_05"></div>
+	<div class="f_circleG" id="frotateG_06"></div>
+	<div class="f_circleG" id="frotateG_07"></div>
+	<div class="f_circleG" id="frotateG_08"></div>
 </div>
-    </div>
+
 </div>
+
 
 
 {% endblock %}
@@ -115,16 +118,13 @@ CUAHSI Time Series Viewer
 
 {% block scripts %}
 
-
-<script src="//cdnjs.cloudflare.com/ajax/libs/dygraph/1.1.1/dygraph-combined.js"></script>
+<!--<script src="https://code.highcharts.com/modules/boost.js"></script>-->
 <script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts.js"></script>
 <script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts-more.js"></script>
 <script src="/static/tethys_gizmos/vendor/highcharts/js/modules/exporting.js"></script>
-<!--<script src="https://code.highcharts.com/modules/boost.js"></script>-->
-<!--<script src="{% static 'timeseries_viewer/js/zingchart.min.js'%}"></script>-->
-<!--<script src="http://cdn.zingchart.com/zingchart.jquery.min.js"></script>-->
 <script src="{% static 'timeseries_viewer/js/main.js' %}"></script>
 <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
+
 <link href = 'https://cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css' rel ='stylesheet'>
 
 
