Reverted to previous loading screen

--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -96,15 +96,12 @@ CUAHSI Time Series Viewer
 
 <div id = loading>
     <!--http://cssload.net/-->
-    <div id="floatingCirclesG">
-	<div class="f_circleG" id="frotateG_01"></div>
-	<div class="f_circleG" id="frotateG_02"></div>
-	<div class="f_circleG" id="frotateG_03"></div>
-	<div class="f_circleG" id="frotateG_04"></div>
-	<div class="f_circleG" id="frotateG_05"></div>
-	<div class="f_circleG" id="frotateG_06"></div>
-	<div class="f_circleG" id="frotateG_07"></div>
-	<div class="f_circleG" id="frotateG_08"></div>
+<div class="cssload-loader">
+	<div class="cssload-dot"></div>
+	<div class="cssload-dot"></div>
+	<div class="cssload-dot"></div>
+	<div class="cssload-dot"></div>
+	<div class="cssload-dot"></div>
 </div>
 
 </div>
@@ -118,7 +115,12 @@ CUAHSI Time Series Viewer
 
 {% block scripts %}
 
-<!--<script src="https://code.highcharts.com/modules/boost.js"></script>-->
+<!--<script src="https://code.highcharts.com/modules/boost.js"></script>-->s
+
+
+<!--<script src="http://code.highcharts.com/stock/highstock.js"></script>-->
+
+
 <script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts.js"></script>
 <script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts-more.js"></script>
 <script src="/static/tethys_gizmos/vendor/highcharts/js/modules/exporting.js"></script>
