Minor bug fixes

--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -96,7 +96,8 @@ CUAHSI Time Series Viewer
 
 <div id = loading>
     <!--http://cssload.net/-->
-<div class="cssload-loader">
+    <!--<img src="/static/timeseries_viewer/images/main-loading-anim.gif" />-->
+   <div class="cssload-loader">
 	<div class="cssload-dot"></div>
 	<div class="cssload-dot"></div>
 	<div class="cssload-dot"></div>
@@ -105,8 +106,6 @@ CUAHSI Time Series Viewer
 </div>
 
 </div>
-
-
 
 {% endblock %}
 
